--- a/Formulario/tipo.css
+++ b/Formulario/tipo.css
@@ -21,12 +21,17 @@ fieldset{
     border: 0px;
 }
 body{
+    
+    
+    max-width: 1200px;
+    min-width: 320px;
     background-color: #f0f8ff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     color: #59428d;
-    margin-left: 34%;
-    margin-top: 2%;
+     margin: auto;
+     margin-left: 34%;
+     margin-right: 2%;
     justify-content: center;
 }
 input, select, textarea, button{
@@ -71,11 +76,12 @@ fieldset.grupo .campo{
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-    position: absolute;
     top: 90%;
     left: 50%;
     margin-right:  -50%;
-    transform: translate(-50%, 10%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    font-size: 150%;
 }
 .botao:hover{
     background: #ccbbff;
