--- a/javaexercicios/css1/estilos.css
+++ b/javaexercicios/css1/estilos.css
@@ -13,13 +13,15 @@ header{
 section{
     background: white;
     border-radius: 10px;
-    padding: 1px;
+    padding: 0px;
     width: 700px;
     margin: auto;
+    margin-bottom: 0px;
 
 }
 #tela img{
-    height: 300px;
+    height: 250px;
+    margin-bottom: 0px;
 
 }
 footer{
