--- a/javaexercicios/css1/estilos.css
+++ b/javaexercicios/css1/estilos.css
@@ -17,8 +17,12 @@ section{
     padding: 0px;
     width: 700px;
     margin: auto;
+    margin-bottom: 0px;
+}
 
-=======
+#tela img{
+    height: 250px;
+    margin-bottom: 0px;
   
 }
 div{
@@ -28,7 +32,7 @@ div{
     height: 300px;
     margin-top: 0px;
     padding: 0px;
->>>>>>> 59469aa513a83470331a52b3718684cddc129d66
+
 
 }
 footer{
